added jobs functionality hihihihihi
